[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Background/empty_grid.png" type="Texture" id=1]
[ext_resource path="res://standard_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://assets/font/GlacialIndifference-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Tileset/pedestrian.png" type="Texture" id=5]
[ext_resource path="res://Assets/Tileset/bicycle.png" type="Texture" id=6]
[ext_resource path="res://AgentList.tres" type="ButtonGroup" id=7]
[ext_resource path="res://Assets/Tileset/vehicle.png" type="Texture" id=8]
[ext_resource path="res://agent_tileset.tres" type="TileSet" id=9]
[ext_resource path="res://TileMap.gd" type="Script" id=10]
[ext_resource path="res://Assets/Font/Glacial_trackname.tres" type="DynamicFont" id=11]
[ext_resource path="res://Assets/Font/Glacial_Title.tres" type="DynamicFont" id=12]
[ext_resource path="res://Assets/Tileset/forest.png" type="Texture" id=13]
[ext_resource path="res://Assets/Tileset/gras.png" type="Texture" id=14]
[ext_resource path="res://Assets/Tileset/hill.png" type="Texture" id=15]
[ext_resource path="res://Assets/Tileset/water.png" type="Texture" id=16]
[ext_resource path="res://Assets/Tileset/town.png" type="Texture" id=17]
[ext_resource path="res://Assets/Font/titlescreen_footer.tres" type="DynamicFont" id=18]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 5
outline_color = Color( 1, 0, 0, 1 )
extra_spacing_char = 10
font_data = ExtResource( 4 )

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 4.0
margin_top = 5.0
margin_right = 1291.0
margin_bottom = 1031.0
color = Color( 0.145098, 0.145098, 0.145098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="ColorRect"]
visible = false
position = Vector2( 12, 22 )
scale = Vector2( 2.06732, 1.97089 )
texture = ExtResource( 1 )
centered = false

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 24, 28 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
cell_half_offset = 1
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 1, 0, 4, 1, 0, 5, 0, 0, 6, 4, 0, 7, 4, 0, 8, 4, 0, 9, 4, 0, 10, 4, 0, 11, 4, 0, 12, 4, 0, 13, 4, 0, 14, 4, 0, 15, 4, 0, 65536, 0, 0, 65537, 0, 0, 65538, 1, 0, 65539, 0, 0, 65540, 1, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 4, 0, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 4, 0, 65551, 1, 0, 65552, 4, 0, 131072, 1, 0, 131073, 0, 0, 131074, 0, 0, 131075, 1, 0, 131076, 0, 0, 131077, 1, 0, 131078, 0, 0, 131079, 1, 0, 131080, 0, 0, 131081, 4, 0, 131082, 4, 0, 131083, 4, 0, 131084, 4, 0, 131085, 3, 0, 131086, 4, 0, 131087, 1, 0, 131088, 4, 0, 196608, 1, 0, 196609, 3, 0, 196610, 1, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 1, 0, 196615, 1, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 0, 196619, 4, 0, 196620, 4, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 4, 0, 262152, 1, 0, 262153, 1, 0, 262154, 4, 0, 262155, 1, 0, 262156, 1, 0, 262157, 2, 0, 262158, 1, 0, 262159, 1, 0, 262160, 2, 0, 262161, 2, 0, 327680, 4, 0, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 0, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327688, 4, 0, 327689, 4, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 2, 0, 327694, 2, 0, 327695, 1, 0, 327696, 2, 0, 327697, 3, 0, 393216, 4, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 2, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 1, 0, 458760, 4, 0, 458761, 2, 0, 458762, 2, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 4, 0, 458770, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 2, 0, 524296, 1, 0, 524297, 1, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 1, 0, 524302, 1, 0, 524303, 3, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 4, 0, 589828, 1, 0, 589829, 2, 0, 589830, 2, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 2, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 655360, 4, 0, 655361, 4, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 2, 0, 655366, 1, 0, 655367, 3, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 720896, 4, 0, 720897, 4, 0, 720898, 1, 0, 720899, 1, 0, 720900, 4, 0, 720901, 4, 0, 720902, 3, 0, 720903, 3, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 786432, 4, 0, 786434, 2, 0, 786436, 4, 0, 786438, 4, 0, 786440, 4, 0, 786442, 4, 0 )
script = ExtResource( 10 )

[node name="BorderMap" type="TileMap" parent="."]
modulate = Color( 0, 0, 0, 0.490196 )
scale = Vector2( 2, 2 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 24, 28 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
cell_half_offset = 1
format = 1
tile_data = PoolIntArray( -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, -65516, 1, 0, -65515, 1, 0, -65514, 1, 0, -65513, 1, 0, -65512, 1, 0, -65511, 1, 0, -65510, 1, 0, -65509, 1, 0, 65535, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 131071, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 65562, 1, 0, 65563, 1, 0, 196607, 1, 0, 131092, 1, 0, 131093, 1, 0, 131094, 1, 0, 131095, 1, 0, 131096, 1, 0, 131097, 1, 0, 131098, 1, 0, 131099, 1, 0, 262143, 1, 0, 196628, 1, 0, 196629, 1, 0, 196630, 1, 0, 196631, 1, 0, 196632, 1, 0, 196633, 1, 0, 196634, 1, 0, 196635, 1, 0, 327679, 1, 0, 262164, 1, 0, 262165, 1, 0, 262166, 1, 0, 262167, 1, 0, 262168, 1, 0, 262169, 1, 0, 262170, 1, 0, 262171, 1, 0, 393215, 1, 0, 327700, 1, 0, 327701, 1, 0, 327702, 1, 0, 327703, 1, 0, 327704, 1, 0, 327705, 1, 0, 327706, 1, 0, 327707, 1, 0, 458751, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0, 393241, 1, 0, 393242, 1, 0, 393243, 1, 0, 524287, 1, 0, 458772, 1, 0, 458773, 1, 0, 458774, 1, 0, 458775, 1, 0, 458776, 1, 0, 458777, 1, 0, 458778, 1, 0, 458779, 1, 0, 589823, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 524315, 1, 0, 655359, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 1, 0, 589851, 1, 0, 720895, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 655384, 1, 0, 655385, 1, 0, 655386, 1, 0, 655387, 1, 0, 786431, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 851967, 1, 0, 786433, 1, 0, 786435, 1, 0, 786437, 1, 0, 786439, 1, 0, 786441, 1, 0, 786443, 1, 0, 786445, 1, 0, 786447, 1, 0, 786449, 1, 0, 786451, 1, 0, 786452, 1, 0, 786453, 1, 0, 786454, 1, 0, 786455, 1, 0, 786456, 1, 0, 786457, 1, 0, 786458, 1, 0, 786459, 1, 0, 917503, 1, 0, 851968, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 1, 0, 851991, 1, 0, 851992, 1, 0, 851993, 1, 0, 851994, 1, 0, 851995, 1, 0, 983039, 1, 0, 917504, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917516, 1, 0, 917518, 1, 0, 917520, 1, 0, 917522, 1, 0, 917524, 1, 0, 917525, 1, 0, 917526, 1, 0, 917527, 1, 0, 917528, 1, 0, 917529, 1, 0, 917530, 1, 0, 917531, 1, 0, 1048575, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 1, 0, 983067, 1, 0, 1114111, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1179647, 1, 0, 1114132, 1, 0, 1114133, 1, 0, 1114134, 1, 0, 1114135, 1, 0, 1114136, 1, 0, 1114137, 1, 0, 1114138, 1, 0, 1114139, 1, 0, 1245183, 1, 0, 1179648, 1, 0, 1179649, 1, 0, 1179650, 1, 0, 1179651, 1, 0, 1179652, 1, 0, 1179653, 1, 0, 1179654, 1, 0, 1179655, 1, 0, 1179656, 1, 0, 1179657, 1, 0, 1179658, 1, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 1, 0, 1179662, 1, 0, 1179663, 1, 0, 1179664, 1, 0, 1179665, 1, 0, 1179666, 1, 0, 1179667, 1, 0, 1179668, 1, 0, 1179669, 1, 0, 1179670, 1, 0, 1179671, 1, 0, 1179672, 1, 0, 1179673, 1, 0, 1179674, 1, 0, 1179675, 1, 0, 1245184, 1, 0, 1245186, 1, 0, 1245188, 1, 0, 1245190, 1, 0, 1245192, 1, 0, 1245194, 1, 0, 1245196, 1, 0, 1245198, 1, 0, 1245200, 1, 0, 1245202, 1, 0, 1245204, 1, 0, 1245206, 1, 0, 1245208, 1, 0, 1245210, 1, 0 )

[node name="ObjectMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 9 )
cell_size = Vector2( 24, 28 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
cell_half_offset = 1
format = 1
tile_data = PoolIntArray( 131076, 0, 0, 327690, 4, 0 )

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="UILayer"]
visible = false
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
margin_bottom = -20.0
color = Color( 0.364706, 0.364706, 0.364706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIContainer" type="Control" parent="UILayer"]
visible = false
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Agents" type="VBoxContainer" parent="UILayer/UIContainer"]
anchor_right = 0.3
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UILayer/UIContainer/Agents"]
margin_right = 372.0
margin_bottom = 61.0
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Agents"
align = 1

[node name="AgentList" type="HBoxContainer" parent="UILayer/UIContainer/Agents"]
margin_top = 65.0
margin_right = 372.0
margin_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 30
alignment = 1

[node name="Pedestrian" type="TextureButton" parent="UILayer/UIContainer/Agents/AgentList"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 48.0
toggle_mode = true
action_mode = 0
group = ExtResource( 7 )
texture_normal = ExtResource( 5 )

[node name="Bicycle" type="TextureButton" parent="UILayer/UIContainer/Agents/AgentList"]
margin_left = 170.0
margin_right = 202.0
margin_bottom = 48.0
toggle_mode = true
action_mode = 0
group = ExtResource( 7 )
texture_normal = ExtResource( 6 )

[node name="Vehicle" type="TextureButton" parent="UILayer/UIContainer/Agents/AgentList"]
margin_left = 232.0
margin_right = 264.0
margin_bottom = 48.0
toggle_mode = true
action_mode = 0
group = ExtResource( 7 )
texture_normal = ExtResource( 8 )

[node name="Tiles" type="VBoxContainer" parent="UILayer/UIContainer"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UILayer/UIContainer/Tiles"]
margin_right = 620.0
margin_bottom = 61.0
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Tile Manager"
align = 1

[node name="AnalyticLayer" type="CanvasLayer" parent="."]

[node name="InfoBox" type="Control" parent="AnalyticLayer"]
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 0.15
margin_left = 25.0
margin_top = 20.0
margin_right = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="AnalyticLayer/InfoBox"]
anchor_right = 1.0
custom_fonts/font = ExtResource( 12 )
text = "HexNavigator"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentTile_Label" type="Label" parent="AnalyticLayer/InfoBox"]
anchor_right = 1.0
anchor_bottom = 0.2
margin_top = 43.0
margin_bottom = -87.6
custom_fonts/font = ExtResource( 11 )
text = "ver. 0.1a"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TerrainBox" type="Control" parent="AnalyticLayer"]
anchor_left = 0.75
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.4
margin_left = 25.0
margin_top = 20.0
margin_right = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="AnalyticLayer/TerrainBox"]
anchor_right = 1.0
custom_fonts/font = ExtResource( 18 )
text = "Step 1: Select tiles and draw a map"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TerrainTiles" type="Control" parent="AnalyticLayer/TerrainBox"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hill" type="Sprite" parent="AnalyticLayer/TerrainBox/TerrainTiles"]
position = Vector2( 103, 88.4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )
offset = Vector2( 0, -16 )

[node name="Town" type="Sprite" parent="AnalyticLayer/TerrainBox/TerrainTiles"]
position = Vector2( 198, 89.4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 17 )
offset = Vector2( 0, -16 )

[node name="Gras" type="Sprite" parent="AnalyticLayer/TerrainBox/TerrainTiles"]
position = Vector2( 55, 114.4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 14 )
offset = Vector2( 0, -16 )

[node name="Water" type="Sprite" parent="AnalyticLayer/TerrainBox/TerrainTiles"]
position = Vector2( 246, 113.4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 16 )
offset = Vector2( 0, -16 )

[node name="Forest" type="Sprite" parent="AnalyticLayer/TerrainBox/TerrainTiles"]
position = Vector2( 152, 114.4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 13 )
offset = Vector2( 0, -16 )

[node name="AgentBox" type="Control" parent="AnalyticLayer"]
anchor_left = 0.75
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.75
margin_left = 25.0
margin_top = 20.0
margin_right = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="AnalyticLayer/AgentBox"]
anchor_right = 1.0
custom_fonts/font = ExtResource( 18 )
text = "Step 2: Place agents onto the map"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgentTiles" type="Control" parent="AnalyticLayer/AgentBox"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pedestrian" type="Sprite" parent="AnalyticLayer/AgentBox/AgentTiles"]
position = Vector2( 104, 47 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="Bicycle" type="Sprite" parent="AnalyticLayer/AgentBox/AgentTiles"]
position = Vector2( 150, 74 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="Vehicle" type="Sprite" parent="AnalyticLayer/AgentBox/AgentTiles"]
position = Vector2( 201, 48 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="debugLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.2
margin_left = 840.0
margin_top = 52.0
margin_right = 953.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 11 )
text = "DEBUG OUTPUT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="UILayer/UIContainer/Agents/AgentList/Pedestrian" to="." method="_on_Pedestrian_toggled"]
